Fix the alignment

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ header {
 }
 
 header h1 {
-  margin: 0 1rem;
+  margin: .75rem 1rem;
   font-size: 1.8rem;
   font-weight: normal;
   font-style: italic;
